--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "yarn": "1.22.4"
   },
   "scripts": {
-    "start": "node index.js"
+    "start": "node index.js",
+    "dev": "nodemon index.js"
   },
   "repository": {
     "type": "git",
@@ -28,6 +29,11 @@
   },
   "homepage": "https://github.com/RileySeaburg/email-survey-app#readme",
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "passport": "^0.4.1",
+    "passport-google-oauth20": "^2.0.0"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.6"
   }
 }
