--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   "homepage": "https://github.com/RileySeaburg/email-survey-app#readme",
   "dependencies": {
     "express": "^4.17.1",
+    "mongoose": "^5.11.9",
     "passport": "^0.4.1",
     "passport-google-oauth20": "^2.0.0"
   },
